<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:background="@color/color_primary_container"
        android:layout_gravity="center"
        tools:context=".fragments.MoreInfoFragment">

    <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_round_close_24"
            android:layout_gravity="top|start"
            android:contentDescription="@string/cd_arrow_back"
            android:layout_margin="@dimen/content_margin"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/btn_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/horizontal_content_margin"
                android:layout_marginEnd="@dimen/horizontal_content_margin"
                android:layout_marginBottom="@dimen/vertical_content_margin">

            <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_content_margin"
                    android:text="@string/title_more"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold" />

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/ic_bc_logo_kotlin_circle"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cd_logo" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_content_margin"
                    android:text="@string/text_developed_by"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <TextView
                    android:id="@+id/txt_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_subtitle_margin"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    tools:text="@string/text_app_version"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_content_margin"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:text="@string/text_more_info"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <LinearLayout
                    android:id="@+id/ll_check_blockchain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_blockchain"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_check_white_paper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_white_paper"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:text="@string/text_or_read"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <LinearLayout
                    android:id="@+id/ll_check_book_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_book_1"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_check_book_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_book_2"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_content_margin"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:text="@string/text_source_code"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <LinearLayout
                    android:id="@+id/ll_check_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_repo"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_content_margin"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:text="@string/text_bout_me"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="normal" />

            <LinearLayout
                    android:id="@+id/ll_check_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/edit_text_margin"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_check_web"
                        android:textAlignment="center"
                        android:textColor="@color/color_accent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_blue_dark" />

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_heart"
                    android:text="@string/text_love"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_margin="@dimen/content_margin" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>