<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.ContentFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".fragments.PowFragment"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:layout_gravity="center">

    <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_close"
                app:srcCompat="@drawable/ic_close_24dp"
                android:layout_gravity="top|start"
                android:contentDescription="@string/cd_arrow_back"
                android:layout_margin="@dimen/content_margin"
                android:background="@android:color/transparent" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/horizontal_content_margin"
                    android:layout_marginEnd="@dimen/horizontal_content_margin"
                    android:layout_marginBottom="@dimen/vertical_content_margin">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vertical_content_margin"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_title"
                            android:text="@string/title_pow"
                            android:textStyle="bold"
                            android:textColor="@color/textColor"
                            android:textAlignment="center"
                            android:layout_marginBottom="@dimen/vertical_content_margin"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:hint="@string/text_set_pow"
                            android:layout_margin="@dimen/content_margin">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edt_set_pow"
                                android:inputType="numberDecimal"
                                android:digits="1234567890"
                                android:imeOptions="actionDone"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:padding="@dimen/edit_text_padding"
                                android:textColorHint="@color/textHintColor"
                                android:textColor="@color/textColor"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="2"
                                android:textAlignment="textStart"
                                android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@color/textColor"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textAlignment="center"
                            android:text="@string/text_pow_warning"
                            android:layout_marginTop="@dimen/vertical_content_margin" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_continue"
                        android:text="@string/text_continue"
                        android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                        android:textStyle="bold"
                        android:textSize="@dimen/edit_text_size"
                        android:textColor="@color/textCautionColor"
                        app:cornerRadius="@dimen/card_corner_radius"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_margin="@dimen/button_margin"
                        android:layout_gravity="center_horizontal|bottom" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.appcompat.widget.ContentFrameLayout>