<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/content_margin">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_index"
                android:text="@string/title_block_number"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/item_rows_margin"
                android:layout_marginEnd="@dimen/item_text_margin" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/item_rows_margin">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_block_previous_hash"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="@dimen/item_text_margin" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_previous_hash"
                    tools:text="Previous hash"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/item_rows_margin">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_block_timestamp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="@dimen/item_text_margin" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_timestamp"
                    tools:text="Timestamp"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart"  />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/item_rows_margin">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_block_data"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="@dimen/item_text_margin" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_data"
                    tools:text="Data"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/item_rows_margin"
                android:layout_marginBottom="@dimen/item_rows_margin">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_block_hash"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="@dimen/item_text_margin" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_hash"
                    tools:text="Hash"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAlignment="textStart" />

        </LinearLayout>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_light_primary"
            android:layout_gravity="bottom" />

</FrameLayout>